# cythonizer

./: CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
cythonizer/: __init__.py  cythonizer.py
